syntax = "proto3";

package model.v1;

message ArtifactInput {
  string image_path = 1;
}

message Artifact {
  string id = 1;
  string job_id = 2;
  string status = 3;
  repeated string object_paths = 4;
  repeated string object_urls = 5;
  int32 created_at = 6;
  int32 updated_at = 7;
}